tests/netconvert/import/XML/errors/broken_edge/edge#id__missing1/errors.netconvert
Error: Attribute 'id' is missing in definition of a edge.
Quitting (on error).
